tests/intersection/lib/__snapshots__/jsfmt.spec.js.snap
exports[`test lib.js 1`] = `
"// @flow

// defs used in tests, here to stress tvar machinery

// used in ObjAssign.js
//
type ObjAssignT = { foo: string } & { bar: string };

// used in pred.js
//
type ReadableStreamOptions = {
  highWaterMark? : number,
  encoding? : ?string,
  objectMode? : boolean
};

type WritableStreamOptions = {
  highWaterMark? : number,
  decodeString? : boolean,
  objectMode? : boolean
};

// used in test_fun.js
//
type ObjA = { foo: number, bar: string };
type ObjB = { baz: bool };

// used in test_obj.js
//
type A = { a: string } & { b: string };
type B = { a: string, b: string };

type C = { [key: string]: number } & { [key: string]: number };
type D = { [key: string]: number };
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/src/printer.js:1407
      return fromString(\" & \").join(path.map(print, \"types\"));
                               ^

TypeError: fromString(...).join is not a function
    at genericPrintNoParens (/src/printer.js:1407:32)
    at genericPrint (/src/printer.js:166:7)
    at p (/src/printer.js:111:37)
    at exports.printComments (/src/comments.js:327:20)
    at printGenerically (/src/printer.js:111:12)
    at FastPath.call (/src/fast-path.js:113:16)
    at genericPrintNoParens (/src/printer.js:1481:14)
    at genericPrint (/src/printer.js:166:7)
    at p (/src/printer.js:111:37)
    at exports.printComments (/src/comments.js:327:20)
"
`;
